--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#docker
+docker-compose.yml
+Dockerfile
+.dockerignore
+docker-compose.override.yml
+docker-compose.prod.yml
+DEPLOY-SERVER.md
+DOCKER-GUIDE.md
+    
