feat: add SEO optimizations, manifest, sitemap, and 3D models for enhanced portfolio experience

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -16,6 +16,7 @@
     "githubUrl": "https://github.com/bastienggg/Dot_TXT",
     "demoUrl": "https://dot-txt.fr",
     "imageUrl": "/projects/dottxt.png",
+    "modelPath": "/projects/Planete1.glb",
     "status": "in-progress",
     "featured": true
   },
