feat: add terminal components for project overview and interaction
- Introduced `TerminalOverview` for initial presentation of the portfolio.
- Created `TerminalProject` to display project details with typewriter effect.
- Added `ContactWindow` for contact information and project previews.
- Implemented `EnterScreen` for entry animation and user interaction.
- Developed `MusicControl` for audio playback control.
- Added `ProgressIndicator` to show current project navigation.
- Created responsive hooks for screen size detection and scroll progress management.
- Implemented Three.js utilities for camera and particle animations.
- Defined TypeScript types for projects and Three.js components.
- Removed obsolete `vercel.json` configuration file.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Bastien Guitard - Portfolio 3D",
   "short_name": "BG Portfolio",
-  "description": "Portfolio interactif 3D de Bastien Guitard, développeur full-stack",
+  "description": "Mon portoflio de développeur full-stack",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F7F7E1",
